--- a/app/src/main/res/layout-land/fragment_movie_info.xml
+++ b/app/src/main/res/layout-land/fragment_movie_info.xml
@@ -49,25 +49,40 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="top|center"
+            android:layout_marginTop="16dp"
             android:contentDescription="@string/movie_poster"
-            android:src="@drawable/image_not_found"
-            android:visibility="visible"
+            android:src="@drawable/placeholder"
+            android:adjustViewBounds="true"
+            android:scaleType="fitCenter"
+            app:layout_constraintHorizontal_bias="0.043"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/favorite_button" />
 
+        <!--<ImageView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/movie_poster"
+            android:contentDescription="@string/movie_poster"
+            android:adjustViewBounds="true"
+            android:layout_centerHorizontal="true"
+            android:src="@drawable/placeholder"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent"/>-->
 
         <!-- this layout contains title, year, rating and popularity -->
         <LinearLayout
             android:layout_width="344dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            android:layout_marginLeft="14dp"
+            android:layout_marginTop="16dp"
             android:gravity="center_horizontal"
             android:orientation="vertical"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/movie_info_poster"
-            tools:layout_editor_absoluteX="8dp">
+            app:layout_constraintLeft_toRightOf="@+id/movie_info_poster"
+            app:layout_constraintTop_toTopOf="parent">
 
             <TextView
                 android:id="@+id/movie_info_title"
