--- a/app/src/main/res/layout/fragment_movie_info.xml
+++ b/app/src/main/res/layout/fragment_movie_info.xml
@@ -52,16 +52,17 @@
             android:contentDescription="@string/movie_poster"
             android:src="@drawable/image_not_found"
             android:visibility="visible"
+            android:adjustViewBounds="true"
+            android:layout_centerHorizontal="true"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="@+id/favorite_button" />
-
 
             <!-- this layout contains title, year, rating and popularity -->
         <LinearLayout
             android:layout_width="344dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            android:layout_margin="8dp"
             android:gravity="center_horizontal"
             android:orientation="vertical"
             app:layout_constraintEnd_toEndOf="parent"
