--- a/app/src/main/res/layout/fragment_trailer.xml
+++ b/app/src/main/res/layout/fragment_trailer.xml
@@ -8,7 +8,10 @@
         android:id="@+id/id"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/text_margin"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:background="@drawable/youtube"
         android:textAppearance="?attr/textAppearanceListItem" />
 
